# WebviewPhoneDirectoryP

./: CMakeLists.txt  README.md  embedded_files.h  main.cpp  vcpkg.json
RabbitMQ/: CMakeLists.txt  consumer.cpp  consumer.h  producer.cpp  producer.h
application/: service.hpp
domain/contact/: contact-factory.hpp  contact-repository.hpp  contact-service.hpp  contact.hpp
public/: index.html  script.js  style.css
